# text-cover-simple

./: Cargo.toml  README.md
assets/: input.txt
src/: canvas.rs  content.rs  main.rs  text.rs
